# s2_fos

./: .gitignore  Dockerfile  Makefile  PROJECT_NAME.txt  README.md  api.py  docker.env  entrypoint.py  mypy.ini  pyproject.toml  requirements.in  setup.py  verify.sh
artifacts/: .gitignore  example_learned_parameters.json
data/: README.md  paper_title_abstract_example_file.json
input/: .gitignore
input/config/: fake_hyperparameters.json
integration_tests/: test_invocations.py
model/: decisionscore.py  decisionscores.py  eval.py  example.py  hyperparameters.py  instance.py  labels.py  multioutput.py  prediction.py  predictor.py  training.py  utils.py
s2_fos/: README.md  __init__.py  requirements.in  setup.py
s2_fos/data/: README.md
s2_fos/s2_fos/: model.py  utils.py
s2_fos/s2_fos/tt/: config.yaml  integration_test.py  interface.py
s2_fos/tt/: config.yaml
server/: api.py
src/: main.py
src/s2_fos/: __init__.py  constants.py  interface.py  model.py  train_net.py  utils.py
src/s2_fos/training/: open_ai_prompts.py  run.sh  train_net.py
src/s2_fos/tt/: interface.py
src/s2_language_detection/: language_classifier.py
test/: test_model_inference.py
tests/: test__api.py
tests/model/: test__utils.py  test_predictor.py  test_training.py  test_utils.py
tests/model/fixtures/: example_hyperparameters.json
tests/model/fixtures/example_labeled_data/: 1.jsonl  2.jsonl
